--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
 }
 
 .center-app {
-  margin-right: 25%;
-  margin-left: 25%;
+  margin: auto;
+  width: 50%;
   background-color: lightgray;
   text-align: center;
 }
