--- a/src/App.css
+++ b/src/App.css
@@ -33,14 +33,15 @@ button{
 
 .space_form_component{
   display: flex;
-  height: 50px;
+  /* height: 50px; */
   padding-top: 15px;
  
 }
-label{
-  display: block;
-  width: 40%;
-  font-size: 23px;
+
+label {
+    display: block;
+    width: 40%;
+    font-size: 23px;
 }
 
 .added_space{
@@ -84,6 +85,23 @@ label{
   margin-left: 10%;
 }
 
+
+@media (max-width: 359px){
+  .container{
+      width: 359px;
+  }
+}
+
+@media (min-width: 498px){
+  .container {
+      width: 100%;
+  }
+  
+  #center-app{
+      width: 100%;
+      margin: auto;
+      height: 90%;
+  }
 
 
 
