--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ button{
 
 .space_form_component{
   display: flex;
-  /* height: 50px; */
+   height: 50px; 
   padding-top: 15px;
  
 }
@@ -103,6 +103,50 @@ label {
       height: 90%;
       
   }
+
+
+button{
+    width: 100%;
+    height: 40px;
+}
+
+.space_form_component{
+    display: flex;
+    height: 50px;
+    padding-top: 15px;
+    
+}
+    
+input[type="number"] {
+    height: 35px;
+    width: 55%;
+}
+
+select{
+    height: 35px;
+    width: 55%;
+}
+
+label{
+    display: block;
+    width: 40%;
+    font-size: 23px;
+}
+.displayResult{
+    width: 80%;
+    height: 90px;    
+    display: flex;
+    margin-top: 10px;
+    margin-left: 10%;
+}
+
+.box{
+    height: 98%;
+    width: 49%;    
+    margin-left: 1%;    
+    justify-content: space-between;
+    border-radius: 5px; 
+}
 }
 
 
